infra/cdk.out/EasyOrderStack.template.json
{
 "Resources": {
  "EasyOrderLogGroup91E97A61": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/easyorder",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/EasyOrderLogGroup/Resource"
   }
  },
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "EasyOrderStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Vpc/VPCGW"
   }
  },
  "ClusterEB0386A7": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Cluster/Resource"
   }
  },
  "ServiceLBE9A1ADBC": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ServiceLBSecurityGroupF7435A5C",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
     },
     {
      "Ref": "VpcPublicSubnet2Subnet691E08A3"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677",
    "VpcPublicSubnet2DefaultRoute97F91067",
    "VpcPublicSubnet2RouteTableAssociationDD5762D8"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/LB/Resource"
   }
  },
  "ServiceLBSecurityGroupF7435A5C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB EasyOrderStackServiceLB3CB4FDB1",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/LB/SecurityGroup/Resource"
   }
  },
  "ServiceLBSecurityGrouptoEasyOrderStackServiceSecurityGroupC0E577878000AF986CAB": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "ServiceSecurityGroupEEA09B68",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "ServiceLBSecurityGroupF7435A5C",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/LB/SecurityGroup/to EasyOrderStackServiceSecurityGroupC0E57787:8000"
   }
  },
  "ServiceLBPublicListener46709EAA": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ServiceLBPublicListenerECSGroup0CC8688C"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ServiceLBE9A1ADBC"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/LB/PublicListener/Resource"
   }
  },
  "ServiceLBPublicListenerECSGroup0CC8688C": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "ServiceTaskDefTaskRole0CFE2F57": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/TaskDef/TaskRole/Resource"
   }
  },
  "ServiceTaskDef1922A00F": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         "053992966334.dkr.ecr.us-east-2.",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/easyorder:latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "EasyOrderLogGroup91E97A61"
        },
        "awslogs-stream-prefix": "easyorder",
        "awslogs-region": "us-east-2"
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ServiceTaskDefExecutionRole919F7BE3",
      "Arn"
     ]
    },
    "Family": "EasyOrderStackServiceTaskDefEAA7B738",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ServiceTaskDefTaskRole0CFE2F57",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/TaskDef/Resource"
   }
  },
  "ServiceTaskDefExecutionRole919F7BE3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/TaskDef/ExecutionRole/Resource"
   }
  },
  "ServiceTaskDefExecutionRoleDefaultPolicy3073559D": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:us-east-2:053992966334:repository/easyorder"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "EasyOrderLogGroup91E97A61",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ServiceTaskDefExecutionRoleDefaultPolicy3073559D",
    "Roles": [
     {
      "Ref": "ServiceTaskDefExecutionRole919F7BE3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "Service9571FDD8": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClusterEB0386A7"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "ServiceLBPublicListenerECSGroup0CC8688C"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ServiceSecurityGroupEEA09B68",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
       },
       {
        "Ref": "VpcPublicSubnet2Subnet691E08A3"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ServiceTaskDef1922A00F"
    }
   },
   "DependsOn": [
    "ServiceLBPublicListenerECSGroup0CC8688C",
    "ServiceLBPublicListener46709EAA",
    "ServiceTaskDefTaskRole0CFE2F57"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/Service/Service"
   }
  },
  "ServiceSecurityGroupEEA09B68": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EasyOrderStack/Service/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "DependsOn": [
    "ServiceTaskDefTaskRole0CFE2F57"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/Service/SecurityGroup/Resource"
   }
  },
  "ServiceSecurityGroupfromEasyOrderStackServiceLBSecurityGroup214A0879800071F03AE4": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "ServiceSecurityGroupEEA09B68",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ServiceLBSecurityGroupF7435A5C",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "ServiceTaskDefTaskRole0CFE2F57"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/Service/SecurityGroup/from EasyOrderStackServiceLBSecurityGroup214A0879:8000"
   }
  },
  "ServiceTaskCountTargetDF7542A8": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 1,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "ClusterEB0386A7"
       },
       "/",
       {
        "Fn::GetAtt": [
         "Service9571FDD8",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": "arn:aws:iam::053992966334:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "ServiceTaskDefTaskRole0CFE2F57"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/Service/TaskCount/Target/Resource"
   }
  },
  "ServiceTaskCountTargetCpuScaling4BCDA6AE": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "EasyOrderStackServiceTaskCountTargetCpuScaling7CDC566D",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "ServiceTaskCountTargetDF7542A8"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "TargetValue": 60
    }
   },
   "DependsOn": [
    "ServiceTaskDefTaskRole0CFE2F57"
   ],
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/Service/Service/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81W224bNxD9luxjsd7GDtAWfpM3FwhwakES/FBBCEYkLTOiSJYXOaqgf88MyV2tYveCPvlB0O7M8PDM7Jkhr5qrt781b9/Ak79gfHOh5Ko5zAKwTY2mLwdl1r453Jr1J2eiXRwqVR5/h62orqufqrpyYmt2oCZGSbZHGxc+OLNPniB0kEZX178el3X7oDukYy3YVXO4twwxt/Bt9JcvaBrCJwjiCfa+x0c8ycJ78QBRhZlg0cmwTzjV9QMoL+rKx5UWoTX6Qa6jg7wpYusTzxwy31syTOIK6aKVSe4+g9+koOMy07yftHWOmKVFCAQ7kApWUuHWfxjdge4sG/PyTFA3yrBNed+CzSBje6dvIWr2WF0HF5GutLtf2h/CwXu51mP0jDjHpP2dbp0oqRC5+pWweDVEXgeLLJksFHqamhjEHFZKnOwn28h7w2QC6IPpYayDcBhZx [...]
   },
   "Metadata": {
    "aws:cdk:path": "EasyOrderStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ServiceLoadBalancerDNSEC5B149E": {
   "Value": {
    "Fn::GetAtt": [
     "ServiceLBE9A1ADBC",
     "DNSName"
    ]
   }
  },
  "ServiceServiceURL250C0FB6": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ServiceLBE9A1ADBC",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
